--- a/U02P02/login.html
+++ b/U02P02/login.html
@@ -19,37 +19,23 @@
 
 
     <div class="formulario-texto">
-        <form>
+        <form action="login.html" method="post" target="_self">
             <label for="nombre">Usuario:</label>
             <input type="text" id="usuario" name="usuario" placeholder="Ingresa tu usuaro" required>
-        </form>
-    </div>
 
-    <br>
 
-    <div class="formulario-texto">
-        <form>
             <label for="clave">Contraseña:</label>
             <input type="password" id="password" name="password" placeholder="Ingresa tu contraseña" required>
-        </form>
-    </div>
 
-    <br>
-
-    <div class="formulario-checkbox">
-        <form>
             <label>
                 <input type="checkbox" name="recordar" value="Guardado">
                 Recordar mis datos
             </label>
+
+            <input type="submit" value="Enviar">
         </form>
     </div>
 
-    <br>
-
-    <input type="submit" value="Enviar">
-
-    </form>
 
 
 </body>
