--- a/U02P02/login.html
+++ b/U02P02/login.html
@@ -23,14 +23,19 @@
             <label for="nombre">Usuario:</label>
             <input type="text" id="usuario" name="usuario" placeholder="Ingresa tu usuaro" required>
 
+            <br>
 
             <label for="clave">Contraseña:</label>
             <input type="password" id="password" name="password" placeholder="Ingresa tu contraseña" required>
 
-            <label>
+            <br>
+
+            <label for="recordar-datos">
                 <input type="checkbox" name="recordar" value="Guardado">
                 Recordar mis datos
             </label>
+
+            <br>
 
             <input type="submit" value="Enviar">
         </form>
