perfil y login corregidos

--- a/U02P02/login.html
+++ b/U02P02/login.html
@@ -21,17 +21,17 @@
     <div class="formulario-texto">
         <form action="login.html" method="post" target="_self">
             <label for="nombre">Usuario:</label>
-            <input type="text" id="usuario" name="usuario" placeholder="Ingresa tu usuaro" required>
+            <input type="text" id="nombre" name="nombre" placeholder="Ingresa tu usuaro" required>
 
             <br>
 
             <label for="clave">Contraseña:</label>
-            <input type="password" id="password" name="password" placeholder="Ingresa tu contraseña" required>
+            <input type="password" id="clave" name="clave" placeholder="Ingresa tu contraseña" required>
 
             <br>
 
             <label for="recordar-datos">
-                <input type="checkbox" name="recordar" value="Guardado">
+                <input type="checkbox" name="recordar-datos" value="Guardado">
                 Recordar mis datos
             </label>
 
