--- a/U03P01/index.html
+++ b/U03P01/index.html
@@ -70,7 +70,7 @@
     <h1>Patagonia argentina</h1>
     <section>
         <h2>Introducción</h2>
-        <p>La Patagonia argentina es una de las cuatroregiones para el desarrollo económico y social de la República
+        <p>La Patagonia Argentina es una de las cuatroregiones para el desarrollo económico y social de la República
             Argentina.</p>
         <p>Está formada por:</p>
         <ul class="lista">
@@ -87,5 +87,4 @@
         <p>Para mas información ingresar en <a href="#">la web oficial de la Patagonia</a>.</p>
     </section>
 </body>
-
 </html>
