--- a/U02P01/index.html
+++ b/U02P01/index.html
@@ -12,7 +12,7 @@
 
     <hr>
 
-    <h2>Presentación: Sistemas operativos no comerciales</h2>
+    <h2>Presentación: Los Sistemas operativos no comerciales</h2>
     <p>Los <b>sistemas operativos no comerciales</b>, también conocidos como <mark>sistemas operativos de código abierto
             o software libre</mark>, son aquellos cuyo código fuente está disponible públicamente y puede ser utilizado,
         modificado y distribuido por cualquier persona de acuerdo con las licencias de software libre. </p>
